Fixed some layout issues with the navbar.

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,13 +3,14 @@
 	background: $header-dark-brown;
 	margin: 0;
 	border: 0;
-	min-height: 45px;
+	height: 50px;
 	border-radius: 0;
 
 	.container-fluid {
 		@media screen and (min-width: 768px) {
 			padding: 0;
 		}
+		height: 50px;
 
 		.navbar-header {
 			.toggle-button-right {
@@ -28,7 +29,9 @@
 			> a {
 				&.navbar-brand {
 					@extend %full-height;
-					display: inline-block;
+					// display: inline-block;
+					display: flex;
+					height: 50px;
 
 					@media screen and (min-width: 1440px) {
 						position: absolute;
@@ -43,7 +46,9 @@
 					letter-spacing: 1.5px;
 					margin-left: 15px;
 					color: $color-white;
-					padding: 14px 0;
+					// padding: 14px 0;
+					padding: 0;
+					align-items: center;
 
 					@media screen and (min-width: 320px) {
 						@include font-properties("Raleway",25px, 200);
@@ -93,19 +98,30 @@
 					height: 100%;
 				}
 
+				&:hover {
+					background: $header-lighter-brown;
+				}
+
 				> a {
 					@media screen and (min-width: 768px) {
 						height: 100%;
 					}
+					display: flex;
+					align-items: center;
 					border-radius: 0px;
 					color: $color-white;
-					// height: inherit;
+
+					@media screen and (min-width: 320px) {
+						padding: 10px 15px;
+					}
+
+					@media screen and (min-width: 768px) {
+						padding: 0;
+					}
+
+					margin: 0 20px;
 					@include font-properties("Raleway", 17px, 200);
 					letter-spacing: 0.5px;
-
-					&:hover {
-						background: $header-lighter-brown;
-					}
 				}
 			}
 		}
